<resources>
    <!-- manifest -->
    <string name="app_name">ElmClass</string>

    <!-- common -->
    <string name="unknown_error">Something went wrong.</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="try_again">Try again</string>

    <!-- options menu -->
    <string name="assignment">New Lesson</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>
    <string name="help">Help</string>
    <string name="confirm_log_out">Are you sure to log out?</string>

    <!-- sign in -->
    <string name="uid_hint">Phone</string>
    <string name="enter_code">Verification code</string>
    <string name="send_code">Get verification code</string>
    <string name="sign_in">Sign In</string>
    <string name="password_sign_in">Sign in with password</string>
    <string name="invalid_code">Invalid verification code</string>
    <string name="invalid_uid">Please enter a valid phone number</string>
    <string name="sms_code">ElmClass: %d</string>
    <string name="sms_failure">Unable to send text message. Please verify the phone number.</string>

    <!-- network -->
    <string name="http_404">Server is temporarily unavailable</string>
    <string name="json_exception">System error: Invalid data format</string>
    <string name="empty_response">System error: Empty response</string>

    <!-- webview -->
    <string name="webview_on_error">"Error on loading web page."</string>
</resources>
