<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        layout="@layout/spinner"/>

    <LinearLayout
        android:id="@+id/signin_container"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp">

        <EditText
            android:id="@+id/uid"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:singleLine="true"
            android:inputType="phone"
            android:hint="@string/uid_hint"
            style="@style/Widget.AppCompat.EditText"/>

        <EditText
            android:id="@+id/code"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:inputType="textPassword"
            android:singleLine="true"
            android:hint="@string/enter_code"
            style="@style/Widget.AppCompat.EditText"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/send_code"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="4dp"
                android:layout_weight="50"
                android:layout_gravity="center_horizontal"
                android:padding="4dp"
                android:background="@drawable/oval_button"
                android:text="@string/send_code"
                android:textAllCaps="false"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/sign_in"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="4dp"
                android:layout_weight="50"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/oval_button"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:text="@string/sign_in"/>
        </LinearLayout>

        <TextView
            android:id="@+id/password_sign_in"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:clickable="true"
            android:text="@string/password_sign_in"
            android:textColor="@color/colorPrimaryBold"/>

    </LinearLayout>
</RelativeLayout>
